force-app/main/default/objects/Lead/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <defaultValue>&quot;naotem@naotem.com&quot;</defaultValue>
    <inlineHelpText>Campo utilizado para o Marketing, não modificar o valor padrão.</inlineHelpText>
    <label>Email do cliente</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>