force-app/main/default/objects/Lead/fields/EmailOportunidade__c.field-meta.xml
<CustomField>
    <fullName>EmailOportunidade__c</fullName>
    <description>Campo que permite o envio das informações para a Oportunidade</description>
    <formula>Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email para Oportunidade</label>
    <type>Text</type>
</CustomField>