force-app/main/default/objects/Lead/fields/EmailsEContatosComplementares__c.field-meta.xml
<CustomField>
    <fullName>EmailsEContatosComplementares__c</fullName>
    <description>Utilizado para e-mails ou contatos extras.</description>
    <label>E-mails e contatos complementares</label>
    <type>TextArea</type>
</CustomField>