force-app/main/default/objects/Lead/fields/EmpresaAtiva__c.field-meta.xml
<CustomField>
    <fullName>EmpresaAtiva__c</fullName>
    <inlineHelpText>Verificar se já é cliente Unimed-BH</inlineHelpText>
    <label>Empresa ativa?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>