force-app/main/default/objects/Lead/fields/EmpresaColetivoPorAdesao__c.field-meta.xml
<CustomField>
    <fullName>EmpresaColetivoPorAdesao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A empresa é coletivo por adesão?</label>
    <type>Checkbox</type>
</CustomField>