force-app/main/default/objects/Lead/fields/EtapaEcommerce__c.field-meta.xml
<CustomField>
    <fullName>EtapaEcommerce__c</fullName>
    <label>Etapa do e-commerce</label>
    <length>255</length>
    <type>Text</type>
</CustomField>