force-app/main/default/objects/Lead/fields/ExclusivoOdonto__c.field-meta.xml
<CustomField>
    <fullName>ExclusivoOdonto__c</fullName>
    <description>Campo paliativo para identificar se existe exclusivo odonto vinculado ao lead ou não</description>
    <label>Possuí exclusivo odonto?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>