force-app/main/default/objects/Lead/fields/ExclusivoOdontoConverteu__c.field-meta.xml
<CustomField>
    <fullName>ExclusivoOdontoConverteu__c</fullName>
    <description>Verifica se o exclusivo odonto converteu em uma oportunidade.</description>
    <label>O Exclusivo Odonto Converteu?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ExclusivoOdonto__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>