force-app/main/default/objects/Lead/fields/FaixaEtaria__c.field-meta.xml
<CustomField>
    <fullName>FaixaEtaria__c</fullName>
    <label>Faixa Etária</label>
    <type>TextArea</type>
</CustomField>