force-app/main/default/objects/Lead/fields/Fila__c.field-meta.xml
<CustomField>
    <fullName>Fila__c</fullName>
    <formula>BEGINS(OwnerId, &quot;00G&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>É fila?</label>
    <type>Checkbox</type>
</CustomField>