force-app/main/default/objects/Lead/fields/FimCondicaoContratual__c.field-meta.xml
<CustomField>
    <fullName>FimCondicaoContratual__c</fullName>
    <label>Fim de condição contratual</label>
    <type>Date</type>
</CustomField>