force-app/main/default/objects/Lead/fields/Grupo_Contratante__c.field-meta.xml
<CustomField>
    <fullName>Grupo_Contratante__c</fullName>
    <label>Grupo Contratante</label>
    <length>20</length>
    <type>Text</type>
</CustomField>