force-app/main/default/objects/Lead/fields/HistoricoDownloadNomeArquivo__c.field-meta.xml
<CustomField>
    <fullName>HistoricoDownloadNomeArquivo__c</fullName>
    <label>Histórico de download nome do arquivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>