force-app/main/default/objects/Lead/fields/HoraCriacao__c.field-meta.xml
<CustomField>
    <fullName>HoraCriacao__c</fullName>
    <formula>TIMEVALUE(CreatedDate - ( 3 / 24 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hora de criação</label>
    <type>Time</type>
</CustomField>