force-app/main/default/objects/Lead/fields/HouvePropostaApresentada__c.field-meta.xml
<CustomField>
    <fullName>HouvePropostaApresentada__c</fullName>
    <formula>IF(ISBLANK(DataUltimaPropostaApresentada__c), &apos;Não&apos;, &apos;Sim&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Houve proposta apresentada?</label>
    <type>Text</type>
</CustomField>