force-app/main/default/objects/Lead/fields/IsConverted__c.field-meta.xml
<CustomField>
    <fullName>IsConverted__c</fullName>
    <formula>ISPICKVAL(Status, &apos;Convertido&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Convertido</label>
    <type>Checkbox</type>
</CustomField>