force-app/main/default/objects/Lead/fields/JaFoiClienteUnimedBH__c.field-meta.xml
<CustomField>
    <fullName>JaFoiClienteUnimedBH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Já foi cliente Unimed-BH?</label>
    <type>Checkbox</type>
</CustomField>