force-app/main/default/objects/Lead/fields/lead_filho__c.field-meta.xml
<CustomField>
    <fullName>lead_filho__c</fullName>
    <formula>LeadPai__c != null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>É lead filho?</label>
    <type>Checkbox</type>
</CustomField>