force-app/main/default/objects/Lead/fields/Lead_perdido__c.field-meta.xml
<CustomField>
    <fullName>Lead_perdido__c</fullName>
    <formula>ISPICKVAL(Status, &apos;Lead perdido&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead perdido</label>
    <type>Checkbox</type>
</CustomField>