force-app/main/default/objects/Lead/fields/LeadPai__c.field-meta.xml
<CustomField>
    <fullName>LeadPai__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Pai</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Leads Filhos</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>