force-app/main/default/objects/Lead/fields/LicitacaoOrgaoPublico__c.field-meta.xml
<CustomField>
    <fullName>LicitacaoOrgaoPublico__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Licitação/Orgão Público</label>
    <type>Checkbox</type>
</CustomField>