force-app/main/default/objects/Lead/fields/LogVisualizacao__c.field-meta.xml
<CustomField>
    <fullName>LogVisualizacao__c</fullName>
    <label>LogVisualizacao</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>