force-app/main/default/objects/Lead/fields/LOJA__c.field-meta.xml
<CustomField>
    <fullName>LOJA__c</fullName>
    <formula>IF( Owner:User.Email = Meta__r.Email__c, Meta__r.Loja__c, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LOJA</label>
    <type>Text</type>
</CustomField>