force-app/main/default/objects/Lead/fields/Mailing__c.field-meta.xml
<CustomField>
    <fullName>Mailing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mailing</label>
    <type>Checkbox</type>
</CustomField>