force-app/main/default/objects/Lead/fields/Meta__c.field-meta.xml
<CustomField>
    <fullName>Meta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meta</label>
    <referenceTo>Meta__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>