force-app/main/default/objects/Lead/fields/Modulo__c.field-meta.xml
<CustomField>
    <fullName>Modulo__c</fullName>
    <label>Módulo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>