force-app/main/default/objects/Lead/fields/MotivoNaoFechamento__c.field-meta.xml
<CustomField>
    <fullName>MotivoNaoFechamento__c</fullName>
    <label>Motivo não fechamento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Sem Condições Financeiras</fullName>
            </value>
            <value>
                <fullName>Preço Acima da Concorrência</fullName>
            </value>
            <value>
                <fullName>Já cliente Unimed Empresarial</fullName>
            </value>
            <value>
                <fullName>Já cliente Unimed Individual</fullName>
            </value>
            <value>
                <fullName>Deseja Plano Empresaria</fullName>
            </value>
            <value>
                <fullName>Já Cliente Unimed Adesão</fullName>
            </value>
            <value>
                <fullName>Cliente Unimed Inadimplente</fullName>
            </value>
            <value>
                <fullName>Cliente não concorda com prazos e carências</fullName>
            </value>
            <value>
                <fullName>Cliente Fora da área de atuação</fullName>
            </value>
            <value>
                <fullName>Cliente sem documentação necessária</fullName>
            </value>
            <value>
                <fullName>Em negociação</fullName>
            </value>
            <value>
                <fullName>Fechou com a concorrência</fullName>
            </value>
            <value>
                <fullName>Fechou com adesão</fullName>
            </value>
            <value>
                <fullName>Não compensou trocar produto</fullName>
            </value>
            <value>
                <fullName>Negado Serasa</fullName>
            </value>
            <value>
                <fullName>Queria produto sem copart</fullName>
            </value>
            <value>
                <fullName>Queria plano nacional</fullName>
            </value>
            <value>
                <fullName>Só queria saber preço - sem intenção de compra</fullName>
            </value>
            <value>
                <fullName>Não Atende /Caixa Posta /Ligação Muda</fullName>
            </value>
            <value>
                <fullName>Proposta Cancelada</fullName>
            </value>
            <value>
                <fullName>Contratou por outro canal</fullName>
            </value>
            <value>
                <fullName>Preenchimento Incorreto/ Orientado a realizar novo preenchimento</fullName>
            </value>
            <value>
                <fullName>Proposta Vencida E-commerce</fullName>
            </value>
            <value>
                <fullName>Achou alto o valor do plano</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>