force-app/main/default/objects/Lead/fields/MotivoNaoVenda__c.field-meta.xml
<CustomField>
    <fullName>MotivoNaoVenda__c</fullName>
    <label>Motivo Não Venda</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>VendaRealizada__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preço (concorrência valor menor)</fullName>
            </value>
            <value>
                <fullName>Condições financeiras</fullName>
            </value>
            <value>
                <fullName>Configuração do Plano (Linear, sem copart, fixo)</fullName>
            </value>
            <value>
                <fullName>Em cotação de mercado</fullName>
            </value>
            <value>
                <fullName>Multa rescisória na contratante</fullName>
            </value>
            <value>
                <fullName>Satisfação com a operadora atual</fullName>
            </value>
            <value>
                <fullName>Cliente Inadimplente</fullName>
            </value>
            <value>
                <fullName>MEI/EI com menos de 180 dias</fullName>
            </value>
            <value>
                <fullName>SERASA</fullName>
            </value>
            <value>
                <fullName>Rede</fullName>
            </value>
            <value>
                <fullName>Não elegível pela documentação/regras</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>