force-app/main/default/objects/Lead/fields/NaoConseguiuContato__c.field-meta.xml
<CustomField>
    <fullName>NaoConseguiuContato__c</fullName>
    <formula>if(text(MotivoNaoFechamento__c) = &apos;Não Atende /Caixa Posta /Ligação Muda&apos;,true,false)</formula>
    <label>Não conseguiu contato</label>
    <type>Checkbox</type>
</CustomField>