force-app/main/default/objects/Lead/fields/NomeContato__c.field-meta.xml
<CustomField>
    <fullName>NomeContato__c</fullName>
    <label>Nome do Contato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>