force-app/main/default/objects/Lead/fields/NomeCorretora__c.field-meta.xml
<CustomField>
    <fullName>NomeCorretora__c</fullName>
    <label>Nome da corretora</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CorretoraResponsavel__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3C CORRETORA DE SEGUROS LTDA ME</fullName>
            </value>
            <value>
                <fullName>A.F.U. ASSEKURANZ CORRETORA DE SEGUROS LTDA</fullName>
            </value>
            <value>
                <fullName>A.R.G - MULTIPLA CORRETORA E ADMINISTRADORA DE SEGUROS LTDA AAGS CORRETORA DE SEGUROS LTDA - ME</fullName>
            </value>
            <value>
                <fullName>A &amp; C NUNES CORRETORA DE SEGUROS LTDA</fullName>
            </value>
            <value>
                <fullName>AAGS CORRETORA DE SEGUROS LTDA - ME</fullName>
            </value>
            <value>
                <fullName>ABNARA CORRETORA DE SEGUROS LTDA</fullName>
            </value>
            <value>
                <fullName>ADMINISTRACAO E SERVICOS LTDA</fullName>
            </value>
            <value>
                <fullName>ADMINISTRADORA E CONSULTORIA DE SEGUROS LTDA</fullName>
            </value>
            <value>
                <fullName>ADMINISTRADORA E CORRETORA DE SEGUROS LTDA</fullName>
            </value>
            <value>
                <fullName>ADMINISTRATIVO SÓ SAUDE</fullName>
            </value>
            <value>
                <fullName>ADMIRAL CORRETORA E ADMINISTRADORA DE SEGUROS LTDA</fullName>
            </value>
            <value>
                <fullName>ADMIX - ADMINISTRACAO, CONSULTORIA</fullName>
            </value>
            <value>
                <fullName>AF SEGUROS</fullName>
            </value>
            <value>
                <fullName>AGILE MINAS</fullName>
            </value>
            <value>
                <fullName>AGREGA</fullName>
            </value>
            <value>
                <fullName>ALLBROKERS BRASIL CORRETORA DE SEGUROS LTDA</fullName>
            </value>
            <value>
                <fullName>ALLCARE BENEFICIOS CORRETORA DE SEGUROS SAO PAULO LTDA</fullName>
            </value>
            <value>
                <fullName>ALMEIDA &amp; SALES CORRETORA DE SEGUROS LTDA - ME</fullName>
            </value>
            <value>
                <fullName>ALPER CONSULTORIA E CORRETORA DE SEGUROS S.A.</fullName>
            </value>
            <value>
                <fullName>ALV ADMINISTRADORA E CORRETORA DE SEGUROS LTDA ME</fullName>
            </value>
            <value>
                <fullName>ALV ADMINISTRADORA E CORRETORA DE SEGUROS LTDA ME,</fullName>
            </value>
            <value>
                <fullName>Alves &amp; Denucci Corretora de Seguros Eireli</fullName>
            </value>
            <value>
                <fullName>AMMA &amp; TORRES ADMINISTRADORA E CORRETORA DE SEGUROS EIRELI</fullName>
            </value>
            <value>
                <fullName>AMPLA ADMINISTRACAO E SERVICOS LTDA</fullName>
            </value>
            <value>
                <fullName>AMPLA ADMINISTRADORA DE BENEFICIOS EIRELI</fullName>
            </value>
            <value>
                <fullName>AMPLA CONSULTORIA E CORRETORA DE SEGUROS LTDA</fullName>
            </value>
            <value>
                <fullName>ANGELOS GOUVEA ADMINISTRADORA E CORRETORA SEGUROS LTDA</fullName>
            </value>
            <value>
                <fullName>ANGELOS GOUVEA CORRETORA ADM. SEGURO SAUDE</fullName>
            </value>
            <value>
                <fullName>ANPTA CORRETORA DE SEGUROS LTDA</fullName>
            </value>
            <value>
                <fullName>AON HOLDINGS CORRETORES DE SEGUROS LTDA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>