force-app/main/default/objects/Lead/fields/NomePaiMae__c.field-meta.xml
<CustomField>
    <fullName>NomePaiMae__c</fullName>
    <label>Nome do pai/mãe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>