force-app/main/default/objects/Lead/fields/Numero__c.field-meta.xml
<CustomField>
    <fullName>Numero__c</fullName>
    <label>Número</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>