force-app/main/default/objects/Lead/fields/NumeroCartao__c.field-meta.xml
<CustomField>
    <fullName>NumeroCartao__c</fullName>
    <label>Número do cartão</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>