force-app/main/default/objects/Lead/fields/NumeroVidas__c.field-meta.xml
<CustomField>
    <fullName>NumeroVidas__c</fullName>
    <label>Quantidade de Vidas Novas</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>