force-app/main/default/objects/Lead/fields/ObservacoesCompromisso__c.field-meta.xml
<CustomField>
    <fullName>ObservacoesCompromisso__c</fullName>
    <description>Campo que permite o espelhamento das informações preenchidas, no objeto compromisso de serviço.</description>
    <label>Observações Compromisso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>